--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
-  twitter: epochpioneer01
+  twitter: jasicworkers
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in foot
