--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: 同战斗，共进退！
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i.imgur.com/AtlTvqe.jpg
+avatar: https://upload.cc/i1/2018/08/19/91XeuW.jpg
 
 
 
