--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: 同战斗，共进退！
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://upload.cc/i1/2018/08/19/91XeuW.jpg
+avatar: https://pbs.twimg.com/profile_images/1033004258184941569/2pcCgIUK_400x400.jpg
 
 
 
